fix some style and z-index nuances

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
       height: 100vh;
       padding: 0;
       margin: 0;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
     #nav-view {
@@ -31,6 +31,10 @@
       cursor: pointer;
       background-color: deepskyblue;
       color: white;
+    }
+
+    button:focus {
+      outline: 0;
     }
 
     #cards {
@@ -68,6 +72,7 @@
     .container {
       padding-top: 40px;
       width: 100%;
+      overflow-x: hidden;
     }
 
     .card {
